--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/soctar/FrndzM0/issues"
   },
+  "scripts": {
+    "start": "node app.js"
+  }
   "homepage": "https://github.com/soctar/FrndzM0",
   "dependencies": {
     "express": ">= 4.11.2"
