Added engine version

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/soctar/FrndzM0",
   "dependencies": {
     "express": ">= 4.11.2"
+  },
+  "engines": {
+    "node": "0.12.x"
   }
 }
