--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides a platform for groups of individuals to charge each other with ease and analyze costs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,11 @@
   "bugs": {
     "url": "https://github.com/soctar/FrndzM0/issues"
   },
-  "scripts": {
-    "start": "node app.js"
-  },
   "homepage": "https://github.com/soctar/FrndzM0",
   "dependencies": {
-    "express": ">= 4.11.2"
+    "express": ">= 4.11.2",
+    "morgan": ">=1.5.1",
+    "underscore": "^1.7.0"
   },
   "engines": {
     "node": "0.12.x"
